syntax = "proto3";
package food;
// Définition du message movie
message Food {
    string _id = 1;
    string title = 2;
    string description = 3;
// Ajouter d'autres champs de données pour les films au besoin
}
// Définition des messages de requête et de réponse pour les méthodes d
message GetFoodRequest {
    string food_id = 1;
}

message GetFoodResponse {
    Food food = 1;
}

message CreateFoodRequest {
    string title = 1;
    string description = 2;
}

message CreateFoodResponse {
    Food food = 1;
}

message SearchFoodsRequest {
    string query = 1;
}

message SearchFoodsResponse {
    repeated Food foods = 1;
}

// Définition du service de foods
service FoodService {
rpc GetFood(GetFoodRequest) returns (GetFoodResponse);
rpc Searchfoods(SearchFoodsRequest) returns (SearchFoodsResponse);
rpc CreateFood(CreateFoodRequest) returns (CreateFoodResponse) ;
// Ajouter d'autres méthodes au besoin
}
